# ghostscript-rust-lambda

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile_Extract_Gs_Libs  Dockerfile_Prepare_Image  Makefile  README.md  event.json  samconfig.toml  servers.yaml  template.yaml  template_base.yaml
app-fr/: Cargo.toml  Dockerfile_Build  Dockerfile_Cache_Build
app-fr/src/: load_config.rs  main_aws.rs  main_local.rs  struct_ftp.rs  struct_servers.rs
ftp/: Cargo.toml
ftp/src/: lib.rs
ftp/src/builder/: mod.rs
ghostscript-rs/src/error/: mod.rs
ghostscript/ghostscript-rs/src/: device_list.rs
ghostscript/ghostscript-rs/src/callback/: panic.rs
ghostscript/ghostscript-rs/src/callback/display/: ffi_callbacks.rs
ghostscript/ghostscript-sys/: build.rs
ghostscript/gs-lib/lib/: gsx
ghostscript/pdf2tiff/: Cargo.toml
ghostscript/pdf2tiff/src/: lib.rs
ghostscript/pdf2tiff/src/builder/: display_callback.rs  mod.rs
main/: Cargo.toml
main/src/: display_callback.rs  main.rs
