[package]
edition = "2021"
name = "main"
version = "0.1.0"

[[bin]]
name = "aws-fr"
path = "src/main_aws.rs"
required-features = ["bootstrap"]

[[bin]]
name = "local-fr"
path = "src/main_local.rs"

[dependencies]
ftp = { path = "../ftp", version = "0.1.0" }
pdf2tiff = { path = "../ghostscript/pdf2tiff", version = "0.1.0" }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_yaml = "0.8"
#error-chain = "*"
ssh2 = "*"
aws-sdk-appconfigdata = "*"
aws-sdk-config = "*"
aws-config = "*"
aws-types = "*"
aws-smithy-http = "*"

anyhow = "1"
thiserror = "1"

tokio = { version = "1.0", features = ["macros", "io-util", "sync", "rt-multi-thread"], optional = true }
tracing = { version = "0.1", features = ["log"], optional = true }
tracing-subscriber = { version = "0.3", optional = true }
lambda_runtime = { version = "0.5", optional = true }

[features]
bootstrap = ["dep:tokio", "dep:tracing", "dep:tracing-subscriber", "dep:lambda_runtime"]
