[package]
edition = "2021"
name = "main"
version = "0.1.0"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
ghostscript = { path = "../ghostscript-rs", version = "0.1.0" }
tokio = { version = "1.0", features = ["macros", "io-util", "sync", "rt-multi-thread"] }
lambda_runtime = { version = "0.5" }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

